--- a/notebooks/velocity.ipynb
+++ b/notebooks/velocity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d64dafe7",
    "metadata": {},
    "outputs": [
@@ -31,26 +31,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# ---------- load the file you dumped from LAMMPS ----------\n",
     "data = np.loadtxt('data/velocities_10000K.txt')\n",
-    "vx, vy = data[:,1], data[:,2]                # Å / ps\n",
+    "vx, vy = data[:,1], data[:,2]               \n",
     "\n",
-    "# ---------- constants ----------\n",
-    "kB = 1.380649e-23                            # J K⁻1\n",
-    "m  = 12.0107 * 1.6605390666e-27              # kg\n",
-    "T  = 10000                                   # K   (your run)\n",
+    "kB = 1.380649e-23                           \n",
+    "m  = 12.0107 * 1.6605390666e-27              \n",
+    "T  = 10000                                  \n",
     "\n",
-    "# ---------- convert Å ps⁻¹  →  m s⁻¹ ----------\n",
     "vx *= 1e2\n",
     "vy *= 1e2\n",
     "v  = np.sqrt(vx**2 + vy**2)\n",
     "\n",
-    "# ---------- plotting limits ----------\n",
     "vmax = 1.1*np.max(np.abs(np.concatenate((vx, vy))))\n",
-    "\n",
-    "# ===============================================================\n",
-    "#  (a) single‑component distribution  —  should be Gaussian\n",
-    "# ===============================================================\n",
     "sigma  = np.sqrt(kB*T/m)                     # m/s\n",
     "xs     = np.linspace(-vmax, vmax, 400)\n",
     "\n",
@@ -65,11 +57,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# ===============================================================\n",
-    "#  (b) speed distribution  —  Rayleigh for 2‑D\n",
-    "# ===============================================================\n",
     "vs = np.linspace(0, vmax, 400)\n",
-    "\n",
     "plt.figure(figsize=(6,4))\n",
     "plt.hist(v, bins=100, density=True, alpha=0.6, label='speed  (data)')\n",
     "plt.plot(vs, (m/(kB*T))*vs*np.exp(-m*vs**2/(2*kB*T)),\n",
