--- a/notebooks/geometry.ipynb
+++ b/notebooks/geometry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "98864787",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "from ase.build import graphene\n",
     "from ase.neighborlist import neighbor_list\n",
     "from ase.optimize import BFGS\n",
-    "from ase.calculators.emt import EMT           # swap for AIREBO/ReaxFF later\n",
+    "from ase.calculators.emt import EMT          \n",
     "from ase.io import write\n",
     "\n",
     "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "id": "138926cf",
    "metadata": {},
    "outputs": [],
@@ -131,20 +131,6 @@
     "from ase import Atoms\n",
     "\n",
     "def write_lammps_data_from_ase(filename, atoms: Atoms, a: float, mass: float=12.0107):\n",
-    "    \"\"\"\n",
-    "    Write a LAMMPS .data file from an ASE Atoms object.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    filename : str\n",
-    "        Where to write the .data file.\n",
-    "    atoms : ase.Atoms\n",
-    "        Your graphene Atoms object (with cell and positions already set).\n",
-    "    a : float\n",
-    "        Lattice constant for the title line.\n",
-    "    mass : float, optional\n",
-    "        Atomic mass for atom type 1 (default C ≈12.0107).\n",
-    "    \"\"\"\n",
     "    # Positions and cell\n",
     "    coords = atoms.get_positions()   # (N,3)\n",
     "    cell   = atoms.get_cell()        # 3×3 matrix\n",
@@ -155,21 +141,17 @@
     "    ylo, yhi = 0.0, cell[1, 1]\n",
     "\n",
     "    with open(filename, 'w') as f:\n",
-    "        # —— Header —————————————————————————————————————————————————————————————————————————————————————\n",
     "        f.write(f\"Graphene sheet a={a:g}\\n\")\n",
     "        f.write(f\"{N:d} atoms\\n\\n\")\n",
     "        f.write(\"1 atom types\\n\\n\")\n",
     "\n",
-    "        # —— Box dimensions ——————————————————————————————————————————————————————————————————————\n",
     "        f.write(f\"{xlo:g} {xhi:g} xlo xhi\\n\")\n",
     "        f.write(f\"{ylo:g} {yhi:g} ylo yhi\\n\")\n",
     "        f.write(f\"-10 10 zlo zhi\\n\\n\")\n",
     "\n",
-    "        # —— Masses —————————————————————————————————————————————————————————————————————————————\n",
     "        f.write(\"Masses\\n\\n\")\n",
     "        f.write(f\"1 {mass:g}\\n\\n\")\n",
     "\n",
-    "        # —— Atoms ——————————————————————————————————————————————————————————————————————————————\n",
     "        f.write(\"Atoms\\n\\n\")\n",
     "        for idx, (x, y, z) in enumerate(coords, start=1):\n",
     "            f.write(f\"{idx:d} 1 {x:g} {y:g} {z:g}\\n\")\n",
